--- a/misc/Path-Tracer/CMakeLists.txt
+++ b/misc/Path-Tracer/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8.4)
 project(pathtracer)
 
-set(CMAKE_BUILD_TYPE Release)
+set(CMAKE_BUILD_TYPE Debug)
 message("-- Build type: " ${CMAKE_BUILD_TYPE})
 
 message("-- Compiler ID: " ${CMAKE_CXX_COMPILER_ID})
@@ -28,6 +28,7 @@ set(SOURCE_FILES
     src/scene.cpp
     src/renderer.cpp
     src/parallel.cpp
+    src/progressreporter.cpp
     lib/rand48/rand48.c
     lib/lodepng/lodepng.cpp
     lib/tiny_obj_loader/tiny_obj_loader.cc)
@@ -37,6 +38,7 @@ add_executable(pathtracer ${SOURCE_FILES}) #defines an executable target
 if("${CMAKE_HOST_SYSTEM_NAME}" STREQUAL "Linux")
 	message("-- CMake is runnning on Linux platform.")
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wno-narrowing")
+	message("-- Set C++ 11 flag.")
 	target_link_libraries(pathtracer -lpthread)
 elseif("${CMAKE_HOST_SYSTEM_NAME}" STREQUAL "Windows")
 	message("-- CMake is runnning on Windows platform.")
